--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,34 @@ p {
 .main-content p {
   color: blueviolet;
 }
+
+.main-content .btn{
+  display: inline-block;
+  text-decoration: none;
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 239, 1) 100%
+  );
+  color: white;
+  border-radius: 16px;
+  padding: 20px;
+}
+
+.arrow-icon{
+display: flex;
+margin-left: 10%;
+margin-top: 40px;
+}
+
+.arrow-icon img{
+width: 50px;
+margin-left: 40px;
+}
+
+.feature-img{
+  position: absolute;
+  left: 40%;
+  bottom: 0;
+  height: 80%;
+}
